<resources>
    <string name="app_name">Flight Booking App</string>
    <string name="username_text_view">Username:</string>
    <string name="password_text_view">Password:</string>
    <string name="login_button">Login!</string>
    <string name="username_label">Username Label</string>
    <string name="upload_flight_button">Upload Flights</string>
    <string name="upload_client_button">Upload Clients</string>
    <string name="search_flight_button">Edit Flight</string>
    <string name="search_client_button">View Client</string>
    <string name="logout_button">Logout</string>
    <string name="book_itinerary">Book Itinerary</string>
    <string name="choose_file">Input File Name</string>
    <string name="upload_flight_textview">No file selected</string>
    <string name="flight_number">Flight</string>
    <string name="flight_found">Flight:</string>
    <string name="no_flight_found">No flights found</string>
    <string name="returned_flight"></string>
    <string name="client_email_imput">Enter Client Email:</string>
    <string name="no_client_found">No client found</string>
    <string name="nothing_returned" />
    <string name="search">Search</string>
    <string name="client">Client</string>
    <string name="departure_text">Departure Date:</string>
    <string name="arrival_text">Arrival Date:</string>
    <string name="airline_text">Airline:</string>
    <string name="origin_text">Origin City:</string>
    <string name="destination_text">Destination City:</string>
    <string name="cost_text">Cost</string>
    <string name="number_of_seats_text">Number of Seats</string>
    <string name="home_button">Return Home</string>
    <string name="edited_flight_info">New Flight Information:</string>
    <string name="edit_flight_button">Submit</string>
    <string name="departure_text_edit" />
    <string name="arrival_text_edit" />
    <string name="airline_text_edit" />
    <string name="origin_text_edit" />
    <string name="destination_text_edit" />
    <string name="cost_text_edit" />
    <string name="number_of_seats_text_edit" />
    <string name="client_email_imput_edit" />
    <string name="client_last_name">Last Name:</string>
    <string name="client_first_name">First Name</string>
    <string name="client_email_text">Email:</string>
    <string name="client_address">Address</string>
    <string name="client_card_number">Credit Card Number</string>
    <string name="client_expiry_date">Expiry Date</string>
    <string name="client_submit_button">Submit</string>
    <string name="client_found">Client found:</string>
    <string name="edited_client_info">New client Information:</string>
    <string name="client_edit_info">Edit Personal Information</string>
    <string name="search_flights">Search Flights</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="departure_date">Departure Date:</string>
    <string name="submit">Submit</string>
    <string name="search_itineraries">Search Itineraries</string>
    <string name="book_flight">Book</string>
    <string name="flight_booked">Flight has been booked:</string>
    <string name="flight_to_be_booked">Flight to be booked</string>
    <string name="book_itinerary_button">Book Itinerary for Client</string>
    <string name="view_itineraries">View Booked Itineraries</string>
    <string name="clients_booked_itineraries">Booked Itineraries:</string>
    <string name="user_admin">admin</string>
    <string name="user_client">client</string>
    <string name="client_email">client_email</string>
    <string name="client_search_flight_button">Search Flights</string>
    <string name="user_authority">user</string>
    <string name="sort_cost">Sort by Cost</string>
    <string name="sort_time">Sort by Time</string>
</resources>
