<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pw.tayyab.flightbookingapp.AdminEditFlightActivity"
    android:weightSum="1">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/flight_found"
        android:id="@+id/success_text_view" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/returned_flight"
        android:id="@+id/flight_number_view_text"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/departure_date_text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/departure_text_edit"
                android:id="@+id/departure_date_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/arrival_text"
                android:id="@+id/arrival_date_text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/arrival_text_edit"
                android:id="@+id/arrival_date_edit" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/airline_text"
                android:id="@+id/arline_text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/airline_text_edit"
                android:id="@+id/airline_edit"
                android:inputType="" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/origin_text"
                android:id="@+id/origin_text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin_text_edit"
                android:id="@+id/origin_edit"
                android:inputType="" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/destination_text"
                android:id="@+id/destination_text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/destination_text_edit"
                android:id="@+id/destination_edit"
                android:inputType="" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cost_text"
                android:id="@+id/cost_text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/cost_text_edit"
                android:id="@+id/cost_edit"
                android:inputType="" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/number_of_seats_text"
                android:id="@+id/seat_num_text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/number_of_seats_text_edit"
                android:id="@+id/seat_num_edit"
                android:inputType="" />






            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_flight_button"
                android:id="@+id/edit_flight_button"
                android:onClick="submitEditFlightRequest"/>



    </LinearLayout>
</ScrollView>
