<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pw.tayyab.flightbookingapp.AdminMainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editFlightsButton"
        android:hint="@string/search_flight_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchClientButton"
        android:hint="@string/search_client_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/upload_client_button"
        android:onClick="uploadClientsButton" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/upload_flight_button"
        android:onClick="uploadFlightsButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/logout_button"
        android:onClick="logout"/>

</LinearLayout>
