<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pw.tayyab.flightbookingapp.ClientMainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayout">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_edit_info"
            android:id="@+id/client_edit_button"
            android:onClick="editClientInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_search_flight_button"
            android:onClick="searchFlights"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/view_itineraries"
        android:id="@+id/view_itineraries_button"
        android:onClick="viewBookedItineraries" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/logout_button"
        android:onClick="logout"
        android:id="@+id/client_main_logout_button" />
</LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_button"
        android:id="@+id/client_main_home_button"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:onClick="returnToAdmin"/>
</RelativeLayout>
